--- a/_colors.scss
+++ b/_colors.scss
@@ -76,8 +76,8 @@
   --text-accent-hover
 
   // Text colors > Text background colors
-  --text-selection
-  --text-highlight-bg*/
+  --text-selection*/
+  --text-highlight-bg: hsla(var(--color-accent-hsl), 0.3);
 
   // Caret color
   --caret-color: var(--color-base-70);
